syntax = "proto3";
package gmountie;
option go_package = "pkg/proto";

import "api/proto/common.proto";

message OpenRequest {
  Caller caller = 1;
  string path = 2;
  uint32 flags = 3;
}

message OpenReply {
  int32 status = 1;
}

message CreateRequest {
  Caller caller = 1;
  string path = 2;
  uint32 flags = 3;
  uint32 mode = 4;
}

message CreateReply {
  int32 status = 1;
}

message ReadRequest {
  string path = 1;
  int64 offset = 2;
  uint32 size = 3;
}

message ReadReply {
  bytes bytes = 1;
  int64 size = 2;
  int32 status = 3;
}

message WriteRequest {
  string path = 1;
  bytes bytes = 2;
  int64 offset = 3;
}

message WriteReply {
  uint32 written = 1;
  int32 status = 2;
}

service RpcFile {
  rpc Open (OpenRequest) returns (OpenReply);
  rpc Create (CreateRequest) returns (CreateReply);
  rpc Read (ReadRequest) returns (ReadReply);
  rpc Write (WriteRequest) returns (WriteReply);
}
